adjust redis service in book service